tests/reference/asr-test_dict2-8ea5254.stderr
semantic error: Type mismatch in dictionary key, the types must be compatible
 --> tests/errors/test_dict2.py:4:7
  |
4 |     y[1] = -3
  |       ^ type mismatch (found: 'i32', expected: 'str')
